fixed header overflow issue

--- a/src/components/common/LanguageDropdown.less
+++ b/src/components/common/LanguageDropdown.less
@@ -13,6 +13,10 @@
   .MuiInput-underline::after, .MuiInput-underline::before {
     border-bottom: none !important;
   }
+
+  .MuiSelect-nativeInput {
+    position: fixed;
+  }
 }
 
 .MuiPaper-root.MuiMenu-paper.MuiPopover-paper {
